force-app/main/default/objects/Document_Variable__c/Document_Variable__c.object-meta.xml
<CustomObject>
    <label>Document Variable</label>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>