force-app/main/default/objects/Document_Variable__c/fields/Image_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Content_Version_Id__c</fullName>
    <label>Image Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>