force-app/main/default/objects/Document_Variable__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Variables</relationshipLabel>
    <relationshipName>Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>