force-app/main/default/objects/Document_Variable__c/fields/Variable_Type__c.field-meta.xml
<CustomField>
    <fullName>Variable_Type__c</fullName>
    <label>Variable Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SYSTEM_DATE</fullName><default>false</default><label>System Date</label></value>
            <value><fullName>CURRENT_USER</fullName><default>false</default><label>Current User</label></value>
            <value><fullName>ORG_NAME</fullName><default>false</default><label>Org Name</label></value>
            <value><fullName>CONSTANT</fullName><default>true</default><label>Constant</label></value>
            <value><fullName>IMAGE</fullName><default>false</default><label>Image</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>